tdf#127913 crash applying popart filter to an image

regression from
    commit 1cd32bcf1b92bd53320717626601135623dadd55
    Date:   Mon Dec 10 11:28:59 2018 +0200
    loplugin:useuniqueptr in vcl

where I failed to note that sort needs a different kind of comparator to
qsort.
Also fix another similar issue I introduced in that commit

Change-Id: I5a93bd0567cd5dd4344b9cf2c362ebff60fa0027
Reviewed-on: https://gerrit.libreoffice.org/80007
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit e347a6bbb58a20e29e691a194c1cd3193d2c5a23)
Reviewed-on: https://gerrit.libreoffice.org/80012